Work on fixing overflow issues

--- a/src/styles/Content.scss
+++ b/src/styles/Content.scss
@@ -19,6 +19,7 @@ a {
 }
 .wrapper {
   background-image: $circuits-bg;
+  height: 100%;
 }
 .title {
 	display: none;
