--- a/src/styles/Work.scss
+++ b/src/styles/Work.scss
@@ -1,6 +1,4 @@
 .work__wrapper {
-  flex-direction: column;
-  justify-content: space-around;
   background-image:
     linear-gradient(green -70%, red 120%),
     linear-gradient(to left, purple 210%, yellow 240%);
